--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.webmanifest" />
-    <meta name="theme-color" content="#84C5E8" />
+    <meta name="theme-color" content="#dd1b32" />
     <!-- <link href="https://fonts.googleapis.com/css?family=Lusitana&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet"> -->
     <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> -->
